# GeDES

./: LICENSE  README.md  generate_table.py  process_alignment_raw_data.py  process_cache_raw_data.py  process_fct_raw_data.py  requirements.txt  script.py
GeDES_code/: CMakeLists.txt  main.cc
GeDES_code/code/c++/include/: arp_protocol.h  component.h  conf.h  frame_decapsulation.h  frame_encapsulation.h  gpu_packet_manager.h  gpu_queue.cuh  ipv4_controller.h  ipv4_decapsulation.h  ipv4_encapsulation.h  memory_pool.h  p2p_channel.h  packet_cache.h  packet_definition.h  protocol_type.h  switch.h  tcp_controller.h  thread_pool.h  topology.h  vdes_timer.h
GeDES_code/code/c++/src/cache/: packet_cache.cc  packet_cache.cu
GeDES_code/code/c++/src/channel/: p2p_channel.cc  p2p_channel.cu
GeDES_code/code/c++/src/components/: component.cc  topology.cc  vdes_timer.cc  vdes_timer_kernel.cu
GeDES_code/code/c++/src/config/: config.cc
GeDES_code/code/c++/src/example/: network_demo.cc  node-switch-node.cc
GeDES_code/code/c++/src/ipv4/: ipv4_controller.cc  ipv4_controller.cu
GeDES_code/code/c++/src/link_layer/: switch.cc  switch.cu
GeDES_code/code/c++/src/memory_management/: gpu_packet_manager.cc  packet_management.cu
GeDES_code/code/c++/src/middleware/: frame_decapsulation.cc  frame_decapsulation.cu  frame_encapsulation.cc  frame_encapsulation.cu  ipv4_decapsulation.cc  ipv4_decapsulation.cu  ipv4_encapsulation.cc  ipv4_encapsulation.cu
GeDES_code/code/c++/src/transport/: tcp_controller.cc  tcp_controller.cu
GeDES_code/code/c++/src/utils/: gpu_queue.cu  (+1 more)
(+5 files in other folders)
